feat: 完善用户管理接口;删除无用代码和逻辑
